<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_qr_code"
            android:title="@string/menu_qr_code_mode"
            android:icon="@drawable/ic_qr_code"
            />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_scanner"
            android:title="@string/menu_scanner_mode"
            />
        <item
            android:id="@+id/nav_saved_cupons"
            android:icon="@drawable/round_save_24"
            android:title="@string/menu_saved_cupons"
            />
    </group>
</menu>