<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_qr_code">

    <fragment
        android:id="@+id/nav_qr_code"
        android:name="com.unichristus.leitor_fiscal.ui.QrCodeFragment"
        android:label="@string/nav_label_qr_code"
        tools:layout="@layout/fragment_qr_code" />

    <fragment
        android:id="@+id/nav_scanner"
        android:name="com.unichristus.leitor_fiscal.ui.ScannerFragment"
        android:label="@string/nav_label_scanner"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/nav_saved_cupons"
        android:name="com.unichristus.leitor_fiscal.ui.SavedCuponsFragment"
        android:label="@string/menu_saved_cupons"
        tools:layout="@layout/fragment_saved_cupons" />
        <action
            android:id="@+id/action_savedCupons_to_cupomDetail"
            app:destination="@id/cupomDetailFragment" />

    <fragment
        android:id="@+id/cupomDetailFragment"
        android:name="com.unichristus.leitor_fiscal.ui.CupomDetailFragment"
        android:label="Detalhes do Cupom"
        tools:layout="@layout/fragment_cupom_detail">
        <argument
            android:name="cupomId"
            app:argType="long" />
    </fragment>

</navigation>